fix(ui): fix button text overflow breaking card layouts

--- a/automad/src/client/admin/styles/components/card.less
+++ b/automad/src/client/admin/styles/components/card.less
@@ -217,17 +217,9 @@
 		}
 
 		&-buttons {
-			display: flex;
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
 			gap: @am-card-padding;
-
-			* + & {
-				margin-top: @am-card-padding;
-			}
-
-			& > * {
-				flex: 1;
-				min-width: 0;
-			}
 		}
 	}
 
